--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "scripts": {},
   "devDependencies": {
     "shadow-cljs": "^2.12.5"
+  },
+  "dependencies": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "showdown": "^1.9.1"
   }
 }
